- ios upload warning fix - remove wall image post if on ios 5 or below - suggested ticket price header copy change

--- a/Wonderland.Web/css/sass/partials/_base.scss
+++ b/Wonderland.Web/css/sass/partials/_base.scss
@@ -370,6 +370,7 @@ Event Page specific - move these out of here eventually
 
 .wall-textarea {
 	font: $fontFaceFutura;
+	font-size: $FontSizeMedium;
 	margin-bottom: 0;
 	padding-bottom: 0;
 	border-bottom: none !important;
